// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiplayerMenu - Edge Cases & CSS Classes > matches DOM snapshot for default state 1`] = `
<div>
  <div
    class="relative w-screen h-screen overflow-hidden flex flex-col items-center justify-between font-sans selection:bg-primary/30 bg-cover bg-center bg-no-repeat transition-all duration-700 bg-game-bg"
  >
    <div
      class="absolute inset-0 bg-gradient-to-b from-white/10 via-transparent to-black/5 dark:from-black/20 dark:to-black/40 pointer-events-none z-0"
    />
    <div
      class="relative z-30 w-full"
    >
      <header
        data-testid="mock-header"
      >
        Header
      </header>
    </div>
    <main
      class="relative z-10 flex-1 w-full max-w-3xl px-6 flex flex-col justify-center items-center my-auto"
    >
      <div
        class="w-full flex flex-col gap-6"
      >
        <button
          class="self-start group flex items-center gap-2 text-xs font-bold tracking-widest text-muted uppercase hover:text-dark transition-colors duration-200 bg-glass-bg border border-glass-border px-4 py-2 rounded-xl backdrop-blur-md shadow-sm"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-left w-4 h-4 transition-transform group-hover:-translate-x-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 19-7-7 7-7"
            />
            <path
              d="M19 12H5"
            />
          </svg>
          <span>
            Back to Menu
          </span>
        </button>
        <div
          class="p-8 rounded-3xl bg-glass-bg backdrop-blur-md border border-glass-border shadow-[0_8px_32px_rgba(45,42,107,0.04)] select-none"
        >
          <h2
            class="text-3xl sm:text-4xl md:text-5xl font-black text-dark uppercase tracking-tight"
          >
            Select 
            <span
              class="text-accent"
            >
              Multiplayer Mode
            </span>
          </h2>
          <p
            class="mt-2 text-muted text-sm md:text-base font-bold tracking-wide"
          >
            Prove your geo-skills against players around the globe.
          </p>
        </div>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-full p-6 sm:p-7 rounded-3xl bg-glass-bg backdrop-blur-md border border-glass-border flex items-center justify-between shadow-md hover:bg-glass-bg/80 transition-all duration-300 hover:scale-[1.01] active:scale-[0.99] text-left"
          >
            <div
              class="flex items-center gap-5"
            >
              <div
                class="w-14 h-14 rounded-2xl bg-primary text-white flex items-center justify-center shrink-0 shadow-md group-hover:scale-105 transition-transform duration-300"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-user w-7 h-7"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div>
                <div
                  class="flex items-center gap-3"
                >
                  <h3
                    class="font-black text-xl sm:text-2xl text-dark uppercase tracking-wide"
                  >
                    1 vs 1
                  </h3>
                  <span
                    class="text-[10px] uppercase font-extrabold tracking-widest px-2.5 py-0.5 rounded-full bg-primary/10 text-accent border border-primary/20"
                  >
                    Duel
                  </span>
                </div>
                <p
                  class="text-xs sm:text-sm text-muted font-bold mt-1"
                >
                  Face off head-to-head in a classic location guessing battle.
                </p>
              </div>
            </div>
            <div
              class="w-10 h-10 rounded-full bg-primary/10 group-hover:bg-primary text-accent group-hover:text-white flex items-center justify-center transition-all duration-300 shrink-0 ml-4"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right w-5 h-5 group-hover:translate-x-0.5 transition-transform"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </div>
          </button>
          <button
            class="group w-full p-6 sm:p-7 rounded-3xl bg-glass-bg backdrop-blur-md border border-glass-border flex items-center justify-between shadow-md hover:bg-glass-bg/80 transition-all duration-300 hover:scale-[1.01] active:scale-[0.99] text-left"
          >
            <div
              class="flex items-center gap-5"
            >
              <div
                class="w-14 h-14 rounded-2xl bg-accent text-white flex items-center justify-center shrink-0 shadow-md group-hover:scale-105 transition-transform duration-300"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-users w-7 h-7"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                  />
                  <path
                    d="M16 3.128a4 4 0 0 1 0 7.744"
                  />
                  <path
                    d="M22 21v-2a4 4 0 0 0-3-3.87"
                  />
                  <circle
                    cx="9"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div>
                <div
                  class="flex items-center gap-3"
                >
                  <h3
                    class="font-black text-xl sm:text-2xl text-dark uppercase tracking-wide"
                  >
                    2 vs 2
                  </h3>
                  <span
                    class="text-[10px] uppercase font-extrabold tracking-widest px-2.5 py-0.5 rounded-full bg-accent/10 text-accent border border-accent/20"
                  >
                    Team
                  </span>
                </div>
                <p
                  class="text-xs sm:text-sm text-muted font-bold mt-1"
                >
                  Teammate co-op mode. Combine your knowledge to win together.
                </p>
              </div>
            </div>
            <div
              class="w-10 h-10 rounded-full bg-accent/10 group-hover:bg-accent text-accent group-hover:text-white flex items-center justify-center transition-all duration-300 shrink-0 ml-4"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right w-5 h-5 group-hover:translate-x-0.5 transition-transform"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`MultiplayerMenu - Edge Cases & CSS Classes > matches DOM snapshot when mode is selected 1`] = `
<div>
  <div
    class="relative w-screen h-screen overflow-hidden flex flex-col items-center justify-between font-sans selection:bg-primary/30 bg-cover bg-center bg-no-repeat transition-all duration-700 bg-game-bg"
  >
    <div
      class="absolute inset-0 bg-gradient-to-b from-white/10 via-transparent to-black/5 dark:from-black/20 dark:to-black/40 pointer-events-none z-0"
    />
    <div
      class="relative z-30 w-full"
    >
      <header
        data-testid="mock-header"
      >
        Header
      </header>
    </div>
    <main
      class="relative z-10 flex-1 w-full max-w-3xl px-6 flex flex-col justify-center items-center my-auto"
    >
      <div
        class="w-full max-w-lg flex flex-col gap-4"
      >
        <button
          class="self-start group flex items-center gap-2 text-xs font-bold tracking-widest text-muted uppercase hover:text-dark transition-colors duration-200 bg-glass-bg border border-glass-border px-4 py-2 rounded-xl backdrop-blur-md shadow-sm"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-left w-4 h-4 transition-transform group-hover:-translate-x-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 19-7-7 7-7"
            />
            <path
              d="M19 12H5"
            />
          </svg>
          <span>
            Change Mode
          </span>
        </button>
        <div
          class="w-full bg-glass-bg border border-glass-border rounded-3xl p-6 sm:p-8 backdrop-blur-md shadow-[0_12px_40px_rgba(0,0,0,0.08)] text-dark"
        >
          <div
            data-testid="mock-queue"
          >
            <span>
              Queue Component
            </span>
            <button
              data-testid="mock-queue-join"
            >
              Join Queue Inner
            </button>
            <button
              data-testid="mock-queue-leave"
            >
              Leave Queue Inner
            </button>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
